--- a/src/about/aboutdoc.fxml
+++ b/src/about/aboutdoc.fxml
@@ -1,13 +1,93 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.effect.InnerShadow?>
 <?import javafx.scene.layout.AnchorPane?>
-<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="627.0" prefWidth="763.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="about.AboutControl">
+<?import javafx.scene.text.Font?>
+
+<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="575.0" prefWidth="763.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="about.AboutControl">
   <content>
-    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="625.0" prefWidth="761.0" style="-fx-background-color: rgba(106,120,248,.898);">
+    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="572.0" prefWidth="761.0" style="-fx-background-color: rgba(106,120,248,.898);">
          <children>
-            <Button fx:id="btnMainMenu" layoutX="14.0" layoutY="586.0" mnemonicParsing="false" onAction="#handleMainMenu" text="Main Menu" />
+            <Button fx:id="btnMainMenu" layoutX="14.0" layoutY="524.0" mnemonicParsing="false" onAction="#handleMainMenu" text="Main Menu" />
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="59.0" layoutY="63.0" opacity="0.94" text="Steganografi Menggunakan Parity Checker dan Generator Modulo" textAlignment="CENTER" textFill="#eeeded" textOverrun="LEADING_WORD_ELLIPSIS" wrapText="true">
+               <font>
+                  <Font size="22.0" />
+               </font>
+               <effect>
+                  <InnerShadow blurType="TWO_PASS_BOX" color="#f5ebeb" />
+               </effect></Label>
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="214.0" layoutY="103.0" opacity="0.94" text="Berbasis LSB dengan Enkripsi AES" textFill="#eeeded">
+               <font>
+                  <Font size="22.0" />
+               </font>
+               <effect>
+                  <InnerShadow blurType="TWO_PASS_BOX" color="#f5ebeb" />
+               </effect>
+            </Label>
+            <Label contentDisplay="CENTER" layoutX="372.0" layoutY="190.0" text="by:" textAlignment="CENTER">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="91.0" layoutY="210.0" opacity="0.94" text="Hendro Pramana Sinaga" textFill="#eeeded">
+               <font>
+                  <Font size="16.0" />
+               </font>
+               <effect>
+                  <InnerShadow blurType="TWO_PASS_BOX" color="#f5ebeb" />
+               </effect>
+            </Label>
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="537.0" layoutY="210.0" opacity="0.94" text="Yusuf Saleh Lubis" textFill="#eeeded">
+               <font>
+                  <Font size="16.0" />
+               </font>
+               <effect>
+                  <InnerShadow blurType="TWO_PASS_BOX" color="#f5ebeb" />
+               </effect>
+            </Label>
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="145.0" layoutY="239.0" opacity="0.94" text="11.111.2824" textFill="#eeeded">
+               <effect>
+                  <InnerShadow blurType="TWO_PASS_BOX" color="#f5ebeb" />
+               </effect>
+            </Label>
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="567.0" layoutY="239.0" opacity="0.94" text="11.111.0891" textFill="#eeeded">
+               <effect>
+                  <InnerShadow blurType="TWO_PASS_BOX" color="#f5ebeb" />
+               </effect>
+            </Label>
+            <Separator layoutX="81.0" layoutY="234.0" prefWidth="200.0" />
+            <Separator layoutX="499.0" layoutY="236.0" prefWidth="200.0" />
+            <Label layoutX="219.0" layoutY="327.0" text="Application Source Code Available Online on" textFill="#1e1d1d">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <Label layoutX="226.0" layoutY="350.0" text="https://github.com/hendro7naga/StegoParityCheckerAES" textFill="#1e1d1d" />
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="292.0" layoutY="424.0" opacity="0.94" text="STMIK MIKROSKIL" textFill="#eeeded">
+               <font>
+                  <Font size="22.0" />
+               </font>
+               <effect>
+                  <InnerShadow blurType="GAUSSIAN" color="#ddcfcf" />
+               </effect>
+            </Label>
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="359.0" layoutY="456.0" opacity="0.94" text="Medan" textFill="#eeeded">
+               <font>
+                  <Font size="14.0" />
+               </font>
+               <effect>
+                  <InnerShadow blurType="GAUSSIAN" color="#ddcfcf" />
+               </effect>
+            </Label>
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="369.0" layoutY="476.0" opacity="0.94" text="2016" textFill="#eeeded">
+               <effect>
+                  <InnerShadow blurType="GAUSSIAN" color="#ddcfcf" />
+               </effect>
+            </Label>
          </children>
     </AnchorPane>
   </content>
