--- a/src/stegano/embeddingdoc.fxml
+++ b/src/stegano/embeddingdoc.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextArea?>
@@ -11,6 +12,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <ScrollPane id="scrolPaneEmbedding" fx:id="scrolPaneEmbedding" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="799.0" prefWidth="971.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="stegano.EmbeddingController">
@@ -19,32 +21,59 @@
          <children>
             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="809.0" prefWidth="1104.0">
                <children>
-                  <Text fx:id="txtLabelMessage" fill="#5e5a5a" layoutX="22.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass=".text" text="Message Text :" />
-                  <TextArea fx:id="textInputMessage" layoutX="22.0" layoutY="55.0" prefHeight="222.0" prefWidth="464.0" wrapText="true" />
-                  <Button fx:id="btnBrowseText" alignment="BASELINE_RIGHT" layoutX="359.0" layoutY="27.0" mnemonicParsing="false" onAction="#handleBrowseFileText" prefHeight="25.0" prefWidth="82.0" text="Browse" textAlignment="RIGHT">
+                  <Text fx:id="txtLabelMessage" fill="#5e5a5a" layoutX="22.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass=".text" text="Message Text :">
+                     <font>
+                        <Font size="14.0" />
+                     </font></Text>
+                  <TextArea fx:id="textInputMessage" layoutX="22.0" layoutY="55.0" prefHeight="222.0" prefWidth="464.0" wrapText="true">
+                     <font>
+                        <Font size="14.0" />
+                     </font></TextArea>
+                  <Button fx:id="btnBrowseText" alignment="BASELINE_RIGHT" layoutX="359.0" layoutY="22.0" mnemonicParsing="false" onAction="#handleBrowseFileText" prefHeight="30.0" prefWidth="93.0" text="Browse" textAlignment="RIGHT">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
+                     <font>
+                        <Font size="14.0" />
+                     </font>
                   </Button>
-                  <Label layoutX="442.0" layoutY="33.0" text="(.txt)" />
+                  <Label layoutX="458.0" layoutY="33.0" text="(.txt)" />
                   <Text fx:id="txtInfoMessage" layoutX="22.0" layoutY="290.0" stroke="#c3c1c1" strokeType="OUTSIDE" strokeWidth="0.0" text="Text Length : " wrappingWidth="362.13671875" />
-                  <Button fx:id="btnEncrypt" disable="true" layoutX="244.0" layoutY="337.0" mnemonicParsing="false" onAction="#handleBtnEncrypt" text="Encrypt" />
-                  <Label layoutX="22.0" layoutY="320.0" text="Kunci : " />
+                  <Button fx:id="btnEncrypt" disable="true" layoutX="235.0" layoutY="335.0" mnemonicParsing="false" onAction="#handleBtnEncrypt" text="Encrypt">
+                     <font>
+                        <Font size="14.0" />
+                     </font></Button>
+                  <Label layoutX="23.0" layoutY="318.0" text="Kunci : ">
+                     <font>
+                        <Font size="14.0" />
+                     </font></Label>
                   <Text layoutX="22.0" layoutY="401.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass=".text" text="Chipertext :" />
                   <Text fx:id="txtInfoChipertext" layoutX="22.0" layoutY="640.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Chipertext Length : " wrappingWidth="387.732421875" />
                   <TextField fx:id="txtInputPass" layoutX="22.0" layoutY="337.0" onKeyReleased="#handleInputPassword" prefHeight="25.0" prefWidth="203.0" />
-                  <Button fx:id="btnMainMenu" alignment="CENTER_RIGHT" layoutX="22.0" layoutY="713.0" mnemonicParsing="false" onAction="#handleBtnMainMenu" prefHeight="26.0" prefWidth="98.0" text="Main Menu" />
-                  <TextArea fx:id="textChiper" editable="false" layoutX="22.0" layoutY="405.0" prefHeight="222.0" prefWidth="466.0" wrapText="true" />
+                  <Button fx:id="btnMainMenu" alignment="CENTER_RIGHT" layoutX="22.0" layoutY="713.0" mnemonicParsing="false" onAction="#handleBtnMainMenu" prefHeight="30.0" prefWidth="127.0" text="Main Menu">
+                     <font>
+                        <Font size="14.0" />
+                     </font></Button>
+                  <TextArea fx:id="textChiper" editable="false" layoutX="22.0" layoutY="405.0" prefHeight="222.0" prefWidth="466.0" wrapText="true">
+                     <font>
+                        <Font size="14.0" />
+                     </font></TextArea>
                   <Separator layoutX="495.0" layoutY="14.0" orientation="VERTICAL" prefHeight="699.0" prefWidth="0.0" />
                   <Text layoutX="508.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cover Image" />
-                  <Button id="btnBrowseCoverImg" fx:id="btnBrowseCoverImg" alignment="CENTER_RIGHT" disable="true" layoutX="688.0" layoutY="29.0" mnemonicParsing="false" onAction="#handlebtnBrowseCoverImg" prefHeight="25.0" prefWidth="78.0" text="Browse" textAlignment="CENTER" />
+                  <Button id="btnBrowseCoverImg" fx:id="btnBrowseCoverImg" alignment="CENTER_RIGHT" disable="true" layoutX="669.0" layoutY="24.0" mnemonicParsing="false" onAction="#handlebtnBrowseCoverImg" prefHeight="30.0" prefWidth="91.0" text="Browse" textAlignment="CENTER">
+                     <font>
+                        <Font size="14.0" />
+                     </font></Button>
                   <ImageView id="imgViewCover" fx:id="imgViewCover" fitHeight="223.0" fitWidth="300.0" focusTraversable="true" layoutX="501.0" layoutY="56.0" pickOnBounds="true" preserveRatio="true" style="-fx-background-color: 'firebrick'; -fx-border-color: darkblue;">
                      <effect>
                         <DropShadow color="#514f4f" height="22.49" radius="11.114999999999998" width="23.97" />
                      </effect>
                   </ImageView>
-                  <Label layoutX="771.0" layoutY="36.0" text="(.bmp)" />
-                  <Button fx:id="btnEmbedMessage" disable="true" layoutX="665.0" layoutY="285.0" mnemonicParsing="false" onAction="#handleBtnEmbedMessage" prefHeight="26.0" prefWidth="136.0" text="Embed Message" />
+                  <Label layoutX="763.0" layoutY="35.0" text="(.bmp)" />
+                  <Button fx:id="btnEmbedMessage" disable="true" layoutX="665.0" layoutY="285.0" mnemonicParsing="false" onAction="#handleBtnEmbedMessage" prefHeight="26.0" prefWidth="136.0" text="Embed Message">
+                     <font>
+                        <Font size="14.0" />
+                     </font></Button>
                   <Separator layoutX="497.0" layoutY="367.0" prefHeight="0.0" prefWidth="432.0" />
                   <Text layoutX="513.0" layoutY="390.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Stego Image" />
                   <ImageView id="imgViewStego" fx:id="imgViewStego" fitHeight="223.0" fitWidth="300.0" focusTraversable="true" layoutX="503.0" layoutY="399.0" pickOnBounds="true" preserveRatio="true" style="-fx-background-color: 'firebrick'; -fx-border-color: darkblue;">
@@ -52,10 +81,30 @@
                         <DropShadow color="#514f4f" height="22.49" radius="11.114999999999998" width="23.97" />
                      </effect>
                   </ImageView>
-                  <Button id="btnSaveStegoImg" fx:id="btnSaveStegoImg" alignment="BASELINE_RIGHT" disable="true" layoutX="709.0" layoutY="629.0" mnemonicParsing="false" onAction="#handleBtnSaveStegoImg" prefHeight="25.0" prefWidth="72.0" text="Save" textAlignment="RIGHT" textOverrun="CLIP" />
-                  <Label layoutX="780.0" layoutY="635.0" text="(.bmp)" />
-                  <Button id="btnNext" fx:id="btnNext" alignment="BASELINE_LEFT" contentDisplay="RIGHT" layoutX="847.0" layoutY="713.0" mnemonicParsing="false" onAction="#handleBtnNextExtraction" prefHeight="26.0" prefWidth="67.0" text="Next" />
+                  <Button id="btnSaveStegoImg" fx:id="btnSaveStegoImg" alignment="BASELINE_RIGHT" disable="true" layoutX="709.0" layoutY="629.0" mnemonicParsing="false" onAction="#handleBtnSaveStegoImg" prefHeight="25.0" prefWidth="72.0" text="Save" textAlignment="RIGHT" textOverrun="CLIP">
+                     <font>
+                        <Font size="14.0" />
+                     </font></Button>
+                  <Label layoutX="785.0" layoutY="636.0" text="(.bmp)" />
+                  <Button id="btnNext" fx:id="btnNext" alignment="BASELINE_LEFT" contentDisplay="RIGHT" layoutX="837.0" layoutY="713.0" mnemonicParsing="false" onAction="#handleBtnNextExtraction" prefHeight="30.0" prefWidth="77.0" text="Next">
+                     <font>
+                        <Font size="14.0" />
+                     </font></Button>
                   <Text id="textInfoCoverImg" fx:id="textInfoCoverImg" layoutX="807.0" layoutY="168.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="199.7294921875" />
+                  <ProgressBar fx:id="progressBar" layoutX="310.0" layoutY="643.0" prefHeight="18.0" prefWidth="370.0" progress="0.0" visible="false" />
+                  <Separator layoutX="498.0" layoutY="319.0" prefHeight="3.0" prefWidth="430.0" />
+                  <Label layoutX="591.0" layoutY="335.0" text="Process Time : ">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="txtfieldDetik" alignment="CENTER" editable="false" layoutX="684.0" layoutY="333.0" prefHeight="25.0" prefWidth="47.0" promptText="00" />
+                  <TextField fx:id="txtfieldMs" alignment="CENTER" editable="false" layoutX="747.0" layoutY="333.0" prefHeight="25.0" prefWidth="47.0" promptText="00" />
+                  <Label layoutX="732.0" layoutY="333.0" text=" : " textAlignment="CENTER">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Label>
                </children>
             </AnchorPane>
          </children>
