--- a/src/stegano/extractiondoc.fxml
+++ b/src/stegano/extractiondoc.fxml
@@ -28,13 +28,13 @@
                   <TextField fx:id="txtInputPass" layoutX="13.0" layoutY="396.0" onKeyPressed="#handleLengthInputPass" onKeyReleased="#handleInputPassword" prefHeight="25.0" prefWidth="273.0" />
                   <Button fx:id="btnExtract" disable="true" layoutX="183.0" layoutY="429.0" mnemonicParsing="false" onAction="#handleBtnExtraction" text="Extract Message" />
                   <TextArea fx:id="textAreaChiper" editable="false" layoutX="315.0" layoutY="33.0" prefHeight="271.0" prefWidth="504.0" wrapText="true" />
-                  <Button fx:id="btnDecrypt" layoutX="761.0" layoutY="311.0" mnemonicParsing="false" onAction="#handleBtnDecrypt" text="Decrypt" />
+                  <Button fx:id="btnDecrypt" disable="true" layoutX="761.0" layoutY="311.0" mnemonicParsing="false" onAction="#handleBtnDecrypt" text="Decrypt" />
                   <Button fx:id="btnMainMenu" layoutX="14.0" layoutY="575.0" mnemonicParsing="false" onAction="#handleMainMenu" text="Main Menu" />
                   <Label layoutX="318.0" layoutY="15.0" text="ChiperText :" />
                   <Label fx:id="lblInfoStego" layoutX="12.0" layoutY="256.0" prefHeight="116.0" prefWidth="290.0" text="(Initial Image)" wrapText="true" />
                   <Label layoutX="317.0" layoutY="323.0" text="Text : " />
                   <TextArea fx:id="textAreaOri" editable="false" layoutX="315.0" layoutY="340.0" prefHeight="234.0" prefWidth="506.0" wrapText="true" />
-                  <Button fx:id="btnSaveText" alignment="BASELINE_RIGHT" layoutX="723.0" layoutY="575.0" mnemonicParsing="false" onAction="#handleBtnSaveText" prefHeight="25.0" prefWidth="67.0" text="Save" textAlignment="RIGHT" />
+                  <Button fx:id="btnSaveText" alignment="BASELINE_RIGHT" disable="true" layoutX="723.0" layoutY="575.0" mnemonicParsing="false" onAction="#handleBtnSaveText" prefHeight="25.0" prefWidth="67.0" text="Save" textAlignment="RIGHT" />
                   <Label layoutX="796.0" layoutY="581.0" text="(.txt)" />
                </children>
             </AnchorPane>
