--- a/src/stegano/robustnessdoc.fxml
+++ b/src/stegano/robustnessdoc.fxml
@@ -10,11 +10,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="793.0" prefWidth="1244.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="stegano.RobustnessControl">
+<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="793.0" prefWidth="1115.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="stegano.RobustnessControl">
    <content>
-      <VBox prefHeight="790.0" prefWidth="1242.0">
+      <VBox prefHeight="790.0" prefWidth="1108.0">
          <children>
-            <AnchorPane prefHeight="790.0" prefWidth="1242.0">
+            <AnchorPane prefHeight="790.0" prefWidth="1211.0">
                <children>
                   <Label layoutX="14.0" layoutY="14.0" text="Stego Image :" />
                   <Button fx:id="btnBrowse" alignment="BASELINE_RIGHT" layoutX="94.0" layoutY="10.0" mnemonicParsing="false" onAction="#handleBrowseStegoImg" prefHeight="25.0" prefWidth="86.0" text="Browse" textAlignment="RIGHT" />
@@ -24,7 +24,7 @@
                   <Label fx:id="lblInfoImgStego" layoutX="14.0" layoutY="273.0" prefHeight="100.0" prefWidth="234.0" text="( image information ... )" wrapText="true" />
                   <Label layoutX="13.0" layoutY="375.0" text="Noise Insertion (Salt And Pepper)" />
                   <Label layoutX="13.0" layoutY="402.0" text="Noise Probability (0 - 1) : " />
-                  <TextField fx:id="txtfieldNoiseProbSaltPepper" layoutX="13.0" layoutY="427.0" prefHeight="25.0" prefWidth="145.0" />
+                  <TextField fx:id="txtfieldNoiseProbSaltPepper" disable="true" layoutX="13.0" layoutY="427.0" prefHeight="25.0" prefWidth="145.0" />
                   <Button fx:id="btnAddNoise" disable="true" layoutX="167.0" layoutY="427.0" mnemonicParsing="false" onAction="#handleAddNoise" text="Add Noise" />
                   <Separator layoutX="530.0" layoutY="10.0" orientation="VERTICAL" prefHeight="361.0" prefWidth="0.0" />
                   <Label layoutX="257.0" layoutY="10.0" text="Stego Image (With Noise)" />
@@ -32,9 +32,9 @@
                   <Button fx:id="btnInitExtractMsg" disable="true" layoutX="260.0" layoutY="280.0" mnemonicParsing="false" onAction="#handleInitExtractMsg" text="Extract Message ?" />
                   <Button fx:id="btnMainMenu" layoutX="12.0" layoutY="743.0" mnemonicParsing="false" onAction="#handleBtnMainMenu" text="Main Menu" />
                   <Separator layoutX="14.0" layoutY="372.0" prefHeight="0.0" prefWidth="238.0" />
-                  <VBox fx:id="vboxpaneExtraction" layoutX="540.0" layoutY="9.0" prefHeight="725.0" prefWidth="665.0" style="-fx-background-color: #f9f9f9;">
+                  <VBox fx:id="vboxpaneExtraction" layoutX="540.0" layoutY="9.0" prefHeight="725.0" prefWidth="544.0" style="-fx-background-color: #f9f9f9;">
                      <children>
-                        <AnchorPane fx:id="anchorPaneExtraction" disable="true" prefHeight="727.0" prefWidth="665.0">
+                        <AnchorPane fx:id="anchorPaneExtraction" disable="true" prefHeight="725.0" prefWidth="625.0">
                            <children>
                               <Label layoutX="8.0" layoutY="5.0" text="Kunci:" />
                               <TextField fx:id="txtfieldKunci" layoutX="8.0" layoutY="22.0" onKeyReleased="#handleInputPassword" prefHeight="25.0" prefWidth="209.0" />
